Fixes to r4gl:setup. Moved initializer into code.

--- a/lib/generators/r4gl/setup/templates/stylesheets/messages.erb
+++ b/lib/generators/r4gl/setup/templates/stylesheets/messages.erb
@@ -62,7 +62,7 @@ label.error {
   margin-right: -0.3em;
 }
 
-input[type=text].error {
+input[type=text].error, input[type=number].error {
   border:2px solid red;
   @include box_shadow(2px, 2px, 3px, darkred);
 
