--- a/lib/generators/r4gl/setup/templates/stylesheets/forms.erb
+++ b/lib/generators/r4gl/setup/templates/stylesheets/forms.erb
@@ -54,7 +54,7 @@ form {
       @include main_font_style();
     }
 
-    input[type=text], input[type=number] {
+    input[type=text], input[type=number], input[type=checkbox], textarea {
       padding: 2px;
       margin: 0 -3px;
 
